yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickmorty
  labels:
    app: rickmorty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rickmorty
  template:
    metadata:
      labels:
        app: rickmorty
    spec:
      containers:
        - name: rickmorty
          image: localhost:5000/rickmorty
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
