yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty
spec:
  selector:
    app: rickandmorty
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 5000
